<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete_white_18dp"
        android:title="delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/baseline_info_white_18dp"
        android:title="About"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/baseline_note_add_white_18dp"
        android:title="Add"
        app:showAsAction="always" />
</menu>